<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.selfproject.hotelreservation.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/cardHotel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/ic_hotel1"
                android:scaleType="centerCrop"/>

            <TextView
                android:paddingLeft="16dp"
                android:paddingTop="16dp"
                android:fontFamily="sans-serif-condensed"
                android:textAppearance="?android:textAppearanceLarge"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/judul_hotel_inna"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/lokasiImg"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="7dp"
                    android:src="@drawable/ic_place" />
                <TextView
                    android:layout_marginLeft="5dp"
                    android:paddingTop="10dp"
                    android:fontFamily="sans-serif-condensed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alamat_hotel_inna"
                    android:layout_toRightOf="@id/lokasiImg"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp">
                <ImageView
                    android:layout_marginLeft="16dp"
                    android:id="@+id/ratingImg"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_star" />
                <TextView
                    android:layout_marginLeft="5dp"
                    android:fontFamily="sans-serif-condensed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rating_hotel_inna"
                    android:layout_toRightOf="@id/ratingImg"/>
                <Button
                    android:background="@color/colorPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:textColor="#FFFFFF"
                    android:layout_marginRight="16dp"
                    android:layout_alignParentRight="true"
                    android:text="300K" />
            </RelativeLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardHotel2"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/ic_hotel2"
                android:scaleType="centerCrop"/>

            <TextView
                android:paddingLeft="16dp"
                android:paddingTop="16dp"
                android:fontFamily="sans-serif-condensed"
                android:textAppearance="?android:textAppearanceLarge"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/judul_hotel_jaffara"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/lokasiImg2"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="7dp"
                    android:src="@drawable/ic_place" />
                <TextView
                    android:layout_marginLeft="5dp"
                    android:paddingTop="10dp"
                    android:fontFamily="sans-serif-condensed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alamat_hotel_jaffara"
                    android:layout_toRightOf="@id/lokasiImg2"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp">
                <ImageView
                    android:layout_marginLeft="16dp"
                    android:id="@+id/ratingImg2"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_star" />
                <TextView
                    android:layout_marginLeft="5dp"
                    android:fontFamily="sans-serif-condensed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rating_hotel_jaffara"
                    android:layout_toRightOf="@id/ratingImg2"/>
                <Button
                    android:background="@color/colorPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:textColor="#FFFFFF"
                    android:layout_marginRight="16dp"
                    android:layout_alignParentRight="true"
                    android:text="@string/harga_hotel_jaffara" />
            </RelativeLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>


    </LinearLayout>
</ScrollView>
